super final for dagstuhl

--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -189,6 +189,9 @@ Instructions for the bleeding edge, nightly release:
   \textit{Name:} \texttt{Trunk Community Contributions} \\
   \textit{Location:} \menu{\KnimeTrunkSite}
   \item \label{it:select_site} After pressing \keys{OK} KNIME will show you all the contents of the added Update Site.
+  \item \textbf{Note:} From now on, you can use this repository for plugins in the \menu{Work with:} drop down list.
+  \item Select the \textbf{OpenMS} nodes in the category: \\ "KNIME Community Contributions - Bioinformatics \& NGS" and click \keys{Next}.
+  \item Follow the instructions and after a restart of KNIME the OpenMS nodes will be available in the Node repository under “Community Nodes”.
 \end{itemize}
 }
 {
@@ -206,6 +209,9 @@ Instructions for the unstable, nightly release:
   \textit{Name:} \texttt{Trunk Community Contributions} \\
   \textit{Location:} \menu{\KnimeTrunkSite}
   \item \label{it:select_site} After pressing \keys{OK} KNIME will show you all the contents of the added Update Site.
+  \item \textbf{Note:} From now on, you can use this repository for plugins in the \menu{Work with:} drop down list.
+  \item Select the \textbf{OpenMS} nodes in the category: \\ "KNIME Community Contributions - Bioinformatics \& NGS" and click \keys{Next}.
+  \item Follow the instructions and after a restart of KNIME the OpenMS nodes will be available in the Node repository under “Community Nodes”.  
 \end{itemize}
 }
 
@@ -289,7 +295,7 @@ mouse at the desired input port of the next node. Deletions are possible by sele
 \keys{Del} or (\keys{Fn}+)\keys{Backspace} depending on your OS and settings. Multiselection happens via dragging 
 rectangles with the mouse or adding elements to the selection by clicking them while holding down \keys{Ctrl}.
 
-\item[Workflow Explorer:]
+\item[KNIME Explorer:]
 Shows a list of available workflows (also called workflow projects).
 You can open a workflow by double clicking it.
 A new workflow can be created with a right-click in the Workflow Explorer followed by selecting \menu{New KNIME 
