trimmed down to label-free only

--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -220,15 +220,15 @@
 
 \include{labelfree}
 
-\include{protein_inference}
+%\include{protein_inference}
 
-\include{metabolomics}
+%\include{metabolomics}
 
-\include{openswath}
+%\include{openswath}
 
-\include{pyopenms}
+%\include{pyopenms}
 
-\include{qualitycontrol}
+%\include{qualitycontrol}
 
 \include{troubleshooting}
 
