--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -1,13 +1,13 @@
 %!TEX root = handout.tex
 
 % file names are changed quite often between tutorial so make them configurable at the top		
-\newcommand{\WindowsKnimeInstallerName}{Windows / KNIME\ 3.2.1\ Installer\ (64bit).exe}		
-\newcommand{\WindowsOpenMSInstallerName}{Windows / OpenMS-2.1\_Win64\_setup.exe}		
-\newcommand{\WindowsOpenMSPrereqInstallerName}{Windows / OpenMS-2.1-prerequisites-installer.exe}	
+\newcommand{\WindowsKnimeInstallerName}{Windows / KNIME\ Full\ 3.3.1\ Installer\ (64bit).exe}	
+\newcommand{\WindowsOpenMSInstallerName}{Windows / OpenMS-2.1\_Win64\_setup.exe}	
+\newcommand{\WindowsOpenMSPrereqInstallerName}{Windows / OpenMS-2.1-prerequisites-installer.exe}
 \newcommand{\WindowsPrerequisitesLink}{http://sourceforge.net/projects/open-ms/files/OpenMS/OpenMS-1.10/OpenMS-1.10-win32-prerequisites-installer.exe/download}
-\newcommand{\MacKnimeInstallerName}{Mac / knime\_3.2.1.app.macosx.cocoa.x86\_64.dmg}		
-\newcommand{\MacOpenMSInstallerName}{Mac / OpenMS-2.1.0\_setup.dmg}		
-\newcommand{\KnimeUpdateSite}{http://update.knime.org/analytics-platform/3.2}		
+\newcommand{\MacKnimeInstallerName}{Mac / knime-full\_3.3.1.app.macosx.cocoa.x86\_64.dmg}	
+\newcommand{\MacOpenMSInstallerName}{Mac / OpenMS-2.1.0\_setup.dmg}
+\newcommand{\KnimeUpdateSite}{http://update.knime.org/analytics-platform/3.2}
 \newcommand{\KnimeTrustedSite}{http://tech.knime.org/update/community-contributions/trusted/3.2}
 \newcommand{\KnimeTrunkSite}{http://tech.knime.org/update/community-contributions/trunk/}
 \setcounter{equation}{0}
