--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -186,7 +186,7 @@
 
 % define that this tutorial is based on a prerelease of OpenMS (will output some additional notes)
 \newtoggle{isprerelease}
-\toggletrue{isprerelease}
+\togglefalse{isprerelease}
 
 \begin{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
