Update of filenames and FAQ

--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -2,11 +2,11 @@
 
 % file names are changed quite often between tutorial so make them configurable at the top		
 \newcommand{\WindowsKnimeInstallerName}{Windows / KNIME\ Full\ 3.3.1\ Installer\ (64bit).exe}	
-\newcommand{\WindowsOpenMSInstallerName}{Windows / OpenMS-2.1\_Win64\_setup.exe}	
+\newcommand{\WindowsOpenMSInstallerName}{Windows / OpenMS-2.1.0\_Win64\_setup.exe}	
 \newcommand{\WindowsOpenMSPrereqInstallerName}{Windows / OpenMS-2.1-prerequisites-installer.exe}
 \newcommand{\WindowsPrerequisitesLink}{http://sourceforge.net/projects/open-ms/files/OpenMS/OpenMS-1.10/OpenMS-1.10-win32-prerequisites-installer.exe/download}
 \newcommand{\MacKnimeInstallerName}{Mac / knime-full\_3.3.1.app.macosx.cocoa.x86\_64.dmg}	
-\newcommand{\MacOpenMSInstallerName}{Mac / OpenMS-2.1.0\_setup.dmg}
+\newcommand{\MacOpenMSInstallerName}{Mac / OpenMS-2.1.0\_Mac.dmg}
 \newcommand{\KnimeUpdateSite}{http://update.knime.org/analytics-platform/3.3}
 \newcommand{\KnimeTrustedSite}{http://tech.knime.org/update/community-contributions/trusted/3.3}
 \newcommand{\KnimeTrunkSite}{http://tech.knime.org/update/community-contributions/trunk/}
