Update of filenames and FAQ

--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -222,6 +222,8 @@
 
 \include{protein_inference}
 
+\include{troubleshooting}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\newpage
 
