[DOC] modified comments

--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -9,17 +9,14 @@
 \hyphenation{OpenMS}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% FONT SELECTION -> WE NOW USE UBUNTU FONT AND XETEX FOR A MORE PROFESSIONAL
-% LOOK.
-% UBUNTU FONT CAN BE DOWNLOADED FROM HERE: http://font.ubuntu.com
-% THEY SHOULD ALSO BE INCLUDED IN THE REPOSITORY.
-% WE TRIED TO USE RELATIVE PATHS BUT IT DOES NOT SEEM TO ALWAYS WORK
-% WITH THE FONTSPEC PACKAGE. THEREFORE PLEASE INSTALL THE FONTS WITH THE
-% METHODS FOR YOUR OS BEFORE COMPILING.
-%
+% We use UBUNTU font for a more professional look.
+% UBUNTU fonts can be downloaded from: http://font.ubuntu.com.
+% but are also included in this repository at ./fonts.
+% 
 \usepackage{fontspec}
 
-
+% If (for some reason), this command does not work, manually install the fonts system-wide and use
+% \setmainfont {Ubuntu}
 \setmainfont[
   Ligatures=TeX,
   Path=./fonts/,
@@ -35,6 +32,8 @@
   FontFace={k}{it}{*-BI}
 ] {Ubuntu}
 
+% If (for some reason), this command does not work, manually install the fonts system-wide and use
+% \setmainfont {UbuntuMono}
 \setmonofont[
   Ligatures=TeX,
   Path=./fonts/,
