--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -223,11 +223,11 @@
 
 \include{metabolomics}
 
-\include{openswath}
+%\include{openswath}
 
-\include{pyopenms}
+%\include{pyopenms}
 
-\include{qualitycontrol}
+%\include{qualitycontrol}
 
 \include{troubleshooting}
 
