fixes shift key misconception https://github.com/OpenMS/Tutorials/issues/61

--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -100,7 +100,7 @@ We will make use of these later throughout the tutorial. Let's start with a firs
         \end{itemize}
     \item Measure mode
         \begin{itemize}
-        \item It is activated using the \keys{\shift} key.
+        \item It is activated using the \keys{\shift} (shift) key.
         \item Press the left mouse button down while a peak is selected and drag the mouse to
         			another peak to measure the distance between peaks.
         \item This mode is implemented in the 1D and 2D mode only.
@@ -389,7 +389,7 @@ Afterwards close the dialog by clicking \menu{Ok}.
 \note{Make sure to use the ``tiny'' version this time, not ``small'', for the sake of faster workflow execution.}
 \item The \KNIMENODE{Input File} node and the \KNIMENODE{FileInfo} node should now have switched to yellow, but the \KNIMENODE{Output Folder} node is still red.
 Double-click on the \KNIMENODE{Output Folder} node and click on \menu{Browse} to select an output directory for the generated data.
-\item Great! Your first workflow is now ready to be run. Press \keys{\shift + F7} (or the button with multiple green triangles in the KNIME Toolbar) to execute the complete workflow.
+\item Great! Your first workflow is now ready to be run. Press \keys{\shift + F7} (shift key + F7; or the button with multiple green triangles in the KNIME Toolbar) to execute the complete workflow.
 You can also right click on any node of your workflow and select \menu{Execute} from the context menu.
 \item The traffic lights tell you about the current status of all nodes in your workflow.
 Currently running tools show either a progress in percent or a moving blue bar, nodes waiting for data show the small word ``queued'', and successfully executed ones become green.
